# mymc-gtk

./: Cargo.toml  README.md  package.sh
assets/: AppRun  mymc-gtk.appdata.xml  mymc-gtk.desktop
src/: bridge.rs  main.rs
